--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                         <div class="tv-gallery">
                                             <img src="images/work3.png" alt="image" class="tv-image">
                                             <div class="overlay">
-                                                <div class="tv-text"><a href="images/work3.png" data-image-popup="" class="tv-single-portfolio">loading...</a></div>
+                                                <div class="tv-text"><a href="images/heatmap.png" data-image-popup="" class="tv-single-portfolio">Heatmap<br>Of Differential<br>Gene Expression<br>Of Radiation<br>Therapy</a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -258,7 +258,7 @@
                                         <div class="tv-gallery">
                                             <img src="images/work4.png" alt="image" class="tv-image">
                                             <div class="overlay">
-                                                <div class="tv-text"><a href="images/work4.png" data-image-popup="" class="tv-single-portfolio">loading...</a></div>
+                                                <div class="tv-text"><a href="images/milesImprov36.png" data-image-popup="" class="tv-single-portfolio">Improvement of<br>Miles Bridges<br>Per36 Stats<br>2021-2022 SZN</a></div>
                                             </div>
                                         </div>
                                     </div>
