--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                             <p class="tv-width-95">I graduated Boston College in May of 2021 with a BS/BA in Biology and Computer Science, with a concentration in Bioinformatics.  
                                 Currently, I am working as a Research Technician under the Duda Group of the Steele Labs, under Mass General Hospital's Department of Radiation Oncology. Here, I perform analysis of RNA-seq and scRNA-seq count matrices using Python and R, as well as additional wet lab work such as cell culture, isolation of plasma and cells from clinical trials, and general handling and operating of research mice. 
-                                With a passion in Data Visualization, I am seeking a Data Scientist/Analyst role in which I can enhance the company's workflow and productivity. 
+                                With a passion in Data Visualization and Code Development, I am seeking a Data Scientist/Software Engineer role in which I can enhance the company's workflow and productivity. 
                                 I hope to pursue higher education in the near future within the field of Computer Science, as well as gain professional experience to further enhance my understanding of Data Analytics and Science! 
                                 Unrelated, also a big New York Knicks fan. 
                         </div>
@@ -131,7 +131,7 @@
                                     </div>
                                 </div>
                                 <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                                    <p>MS Excel <span>80%</span></p>
+                                    <p>C <span>70%</span></p>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="80"></div>
                                     </div>
