minor changes, adding download link, etc

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                                 <li class="tv-image-rule tv-about-image" style="background-image: url('images/about-image-link.png')"><a href="#about" class="page-scroll">About</a><span>2</span></li>
                                                 <li class="tv-image-rule tv-service-image" style="background-image: url('images/service-image-link.png')"><a href="#service" class="page-scroll">Projects</a><span>3</span></li>
                                                 <li class="tv-image-rule tv-service-image" style="background-image: url('images/work-image-link.png')"><a href="#work" class="page-scroll">Experience</a><span>4</span></li>
-                                                <li class="tv-image-rule tv-about-image" style="background-image: url('images/about-image-link.png')"><a href="#contact" class="page-scroll">contact</a><span>5</span></li>
+                                                <li class="tv-image-rule tv-about-image" style="background-image: url('images/about-image-link.png')"><a href="#contact" class="page-scroll">Contact</a><span>5</span></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -133,7 +133,7 @@
                                 <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                                     <p>C <span>70%</span></p>
                                     <div class="progress">
-                                        <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="80"></div>
+                                        <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="70"></div>
                                     </div>
                                 </div>
                             </div>
@@ -151,12 +151,12 @@
                                     <div class="col-md-6 col-sm-12 col-xs-12">
                                         <div class="tv-service-block">
                                             <div class="tv-service-top-head">
-                                                <div class="tv-icon-title-left"><h2><a href="https://www.youtube.com/channel/UC4n5t1CEfzi4rV5xod9NDlQ" target="_blank">kimchiGrafx</a></h2></div>
+                                                <div class="tv-icon-title-left"><h2><a href="https://github.com/kimcwe/shell_simul" target="_blank">shell</a></h2></div>
                                                 <div class="tv-icon-media">
-                                                    <img src="images/kimchiCricle.png" alt="icon"/>
+                                                    <img src="images/icon3.png" alt="icon"/>
                                                 </div>
                                             </div>
-                                            <p>A passion project of mine, is my small YouTube channel where I integrate Data Analytics and Visualization into NBA statistics using mainly R, to produce a brief video form to explain or introduce certain trends or opinions about the NBA and its players!</p>
+                                            <p>Written in C, a project to simulate a shell environment within your terminal, including features such as pipes, subcommands, input/output redirection, etc.</p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-12 col-xs-12">
@@ -223,7 +223,7 @@
                                 <h2 class="tv-text-title">Experience</h2>
                             </div>
                             <p class="tv-width-95"><font color = #1bffa8>Research Technician</font><br>&emsp;Mass General Hospital<br>&emsp;&emsp;<font color = "white">Jun2021 - Present</font>
-                                <br><br><font color = #1bffa8>Teaching Assistant</font><br>&emsp;Boston College, CS Department<br>&emsp;&emsp;<font color = "white">Aug2019 - May2021</font><br><br><a href="" target="_blank"><font color = #FFC107>Resume Link</font></a> </bt></p>
+                                <br><br><font color = #1bffa8>Teaching Assistant</font><br>&emsp;Boston College, CS Department<br>&emsp;&emsp;<font color = "white">Aug2019 - May2021</font><br><br><a href="CV - General.pdf" download="DKim_resume.pdf"><font color = #FFC107>Resume Link</font></a> </bt></p>
                         </div>
                         <div class="col-md-6 col-sm-6 tv-left-padd-30">
                             <h3 class="tv-title-heading">Gallery</h3>
