--- a/index.html
+++ b/index.html
@@ -227,38 +227,38 @@
                         </div>
                         <div class="col-md-6 col-sm-6 tv-left-padd-30">
                             <h3 class="tv-title-heading">Gallery</h3>
-                            <p class="tv-title-desc">Listed here are some of my favorite data visualizations I've produced!</p>
+                            <p class="tv-title-desc">Some photos to get to know me better!</p>
                             <div class="tv-work-gallery">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6 col-xs-6">
                                         <div class="tv-gallery">
-                                            <img src="images/3pvolumeblur.png" alt="image" class="tv-image">
+                                            <img src="images/johnwilliams copy.jpg" alt="image" class="tv-image">
                                             <div class="overlay">
-                                                <div class="tv-text"><a href="images/3PVolume2021FINAL_8232021.png" data-image-popup="" class="tv-single-portfolio">Best Volume<br>3PT Shooters<br>2020-21 Season</a></div>
+                                                <div class="tv-text"><a href="images/johnwilliams.jpg" data-image-popup="" class="tv-single-portfolio">Playing for<br>Composer of<br>Soundtracks of<br>Star Wars and<br>Indiana Jones,<br>John Williams!</a></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-xs-6">
                                         <div class="tv-gallery">
-                                            <img src="images/chromosomefstblur.png" alt="image" class="tv-image">
+                                            <img src="images/uscit copy.jpg" alt="image" class="tv-image">
                                             <div class="overlay">
-                                                <div class="tv-text"><a href="images/chromosomefst.PNG" data-image-popup="" class="tv-single-portfolio">Outlier<br>Fst Values<br>Across<br>Chromosome</a></div>
+                                                <div class="tv-text"><a href="images/uscit.jpg" data-image-popup="" class="tv-single-portfolio">Day of<br>becoming a<br>US Citizen!</a></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-xs-6">
                                         <div class="tv-gallery">
-                                            <img src="images/work3.png" alt="image" class="tv-image">
+                                            <img src="images/celtics copy.jpg" alt="image" class="tv-image">
                                             <div class="overlay">
-                                                <div class="tv-text"><a href="images/heatmap.png" data-image-popup="" class="tv-single-portfolio">Heatmap<br>Of Differential<br>Gene Expression<br>Of Radiation<br>Therapy</a></div>
+                                                <div class="tv-text"><a href="images/celtics.jpg" class="tv-single-portfolio">Playing for<br>Boston Celtics!</a></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-xs-6">
                                         <div class="tv-gallery">
-                                            <img src="images/work4.png" alt="image" class="tv-image">
+                                            <img src="images/sousafam copy.jpg" alt="image" class="tv-image">
                                             <div class="overlay">
-                                                <div class="tv-text"><a href="images/milesImprov36.png" data-image-popup="" class="tv-single-portfolio">Improvement of<br>Miles Bridges<br>Per36 Stats<br>2021-2022 SZN</a></div>
+                                                <div class="tv-text"><a href="images/sousafam.jpg" data-image-popup="" class="tv-single-portfolio">A post-football<br>game hangout!</a></div>
                                             </div>
                                         </div>
                                     </div>
