--- a/index.html
+++ b/index.html
@@ -102,24 +102,23 @@
                                 <h2 class="tv-text-title">about</h2>
                             </div>
                             <p class="tv-width-95">I graduated Boston College in May of 2021 with a BS/BA in Biology and Computer Science, with a concentration in Bioinformatics.  
-                                Currently, I am working as a Research Technician under the Duda Group of the Steele Labs, under Mass General Hospital's Department of Radiation Oncology. Here, I perform analysis of RNA-seq and scRNA-seq count matrices using Python and R, as well as additional wet lab work such as cell culture, isolation of plasma and cells from clinical trials, and general handling and operating of research mice. 
-                                With a passion in Data Visualization and Code Development, I am seeking a Data Scientist/Software Engineer role in which I can enhance the company's workflow and productivity. 
-                                I hope to pursue higher education in the near future within the field of Computer Science, as well as gain professional experience to further enhance my understanding of Data Analytics and Science! 
-                                Unrelated, also a big New York Knicks fan. 
+                                Currently, I am working as a Software Engineer at EAB!
+                                With a passion in data-wrangling and code-development process, I am seeking a Software Engineer/Developer role.  
+                                Unrelated (or very!), also a big New York Knicks fan. 
                         </div>
                         <div class="col-md-6 col-sm-6 tv-left-padd-30">
                             <h3 class="tv-title-heading">Skills</h3>
-                            <p class="tv-title-desc">A general approximation of my experience and knowledge of some of my relevant skills </p>
+                            <p class="tv-title-desc">A general approximation of my experience in some general languages </p>
 
                             <div class="our-skills wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
                                 <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                                    <p>Python <span>90%</span></p>
+                                    <p>Python <span>80%</span></p>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="90"></div>
                                     </div>
                                 </div>
                                 <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="400ms">
-                                    <p>R <span>75%</span></p>
+                                    <p>R <span>60%</span></p>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="75"></div>
                                     </div>
@@ -131,7 +130,7 @@
                                     </div>
                                 </div>
                                 <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                                    <p>C <span>70%</span></p>
+                                    <p>Java <span>60%</span></p>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="70"></div>
                                     </div>
@@ -222,8 +221,11 @@
                             <div class="tv-text-head">
                                 <h2 class="tv-text-title">Experience</h2>
                             </div>
-                            <p class="tv-width-95"><font color = #1bffa8>Research Technician</font><br>&emsp;Mass General Hospital<br>&emsp;&emsp;<font color = "white">Jun2021 - Present</font>
-                                <br><br><font color = #1bffa8>Teaching Assistant</font><br>&emsp;Boston College, CS Department<br>&emsp;&emsp;<font color = "white">Aug2019 - May2021</font><br><br><a href="CV - General.pdf" download="DKim_resume.pdf"><font color = #FFC107>Resume Link</font></a> </bt></p>
+                            <p class="tv-width-95">
+                                <font color = #1bffa8>Associate Software Engineer</font><br>&emsp;EAB<br>&emsp;&emsp;<font color = "white">April2022 - Current</font>
+                                <br><br><font color = #1bffa8>Research Technician</font><br>&emsp;Mass General Hospital<br>&emsp;&emsp;<font color = "white">Jun2021 - April2022</font>
+                                <br><br><font color = #1bffa8>Teaching Assistant</font><br>&emsp;Boston College, CS Department<br>&emsp;&emsp;<font color = "white">Aug2019 - May2021</font>
+                                <br><br><a href="misc_files/resume_01182024.pdf" download="DKim_resume.pdf"><font color = #FFC107>Resume Link</font></a> </bt></p>
                         </div>
                         <div class="col-md-6 col-sm-6 tv-left-padd-30">
                             <h3 class="tv-title-heading">Gallery</h3>
